<?xml version="1.0"?>
<package format="2">
  <name>differential_drive</name>
  <version>0.1.0</version>
  <description>
    This package takes a twist command and converts it to velocity targets for the left and right wheels. 
    It also takes the encoder values of both sides and calculates the odometry.
  </description>

  <maintainer email="jeremie.bourque@usherbrooke.ca">Jeremie Bourque</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

</package>
